# zero-to-production

./: .gitignore  Cargo.toml  Dockerfile
.devcontainer/: bootstrap.sh  devcontainer.json
configuration/: base.yaml  local.yaml
migrations/: 20240818013640_make_status_not_null_in_subscriptions.sql  20240818013853_create_subscription_tokens_table.sql  20240915032048_seed_user.sql
scripts/: clean_db.sh  init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscription_confirm.rs  subscriptions.rs
src/routes/admin/: dashboard.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
