[package]
name = "zero2prod"
version = "0.1.0"
authors = ["rutamu <rtamura30@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1"
thiserror = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9"
fake = "~2.3"
validator = "0.16"
claims = "0.7"
unicode-segmentation = "1"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
once_cell = "1"
tracing-log = "0.1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"] }
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
rand = { version = "0.8", features = ["std_rng"] }


[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
linkify = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
